Version 17.42 - 22 June 2016

- bootloader configuration:
  o add support for crypted grub2 passwords (mga#15930)
  o grub2: do not overwite ESP if not installing on it (mga#15583)
  o grub2: fix setting default entry when in a submenu (mga#18560)

Version 17.41 - 20 June 2016

- bootloader:
  o fix the grub2 post-install check (mga#18739)

Version 17.40 - 20 June 2016

- bootloader:
  o ensure we've the right grub2 flavor (mga#18739)

Version 17.39 - 18 June 2016

- partionning:
  o fix ESP tagging in some cases
- services:
  o update service category lists

Version 17.38 - 16 June 2016

- partionning:
  o fix offering to create a GRUB_BIOS partition in custom mode (mga#18656)
  o fix inverted test when checking need for a GRUB_BIOS partition (mga#18704)

Version 17.37 - 12 June 2016

- partionning:
  o try harder to guess if we need a GRUB_BIOS partition (mga#18656)
- rename desktop image KDE -> Plasma (mga#18687)

Version 17.36.1 - 11 June 2016

- fix selecting Plasma (mga#18687)

Version 17.36 - 11 June 2016

- do not override bootloader on upgrade (mga#18638)
- fix running with nss 3.24
- debug build:
  o gdb needs python3 instead of python2 (and guile as well)
- partionning:
  o add a GRUB_BIOS partition if needed (mga#18656)
  o MBR limit really is 2TiB, not 4, so use GPT for disks > 2TiB

Version 17.35.1 - 7 June 2016

- fix selecting grub2 on !UEFI

Version 17.35 - 7 June 2016

- fix selecting grub2-efi on UEFI (mga#18646)

Version 17.34.1 - 6 June 2016

- fix displaying release notes with WebKit2

Version 17.34 - 6 June 2016

- bootloader:
  o enable to (un)install os-prober (mga#16010, mga#18538)
  o fix reading back last grub2 entry
  o only overwrite GRUB_CMDLINE_LINUX_DEFAULT on first install (mga#18112)
  o only overwrite install.sh when actually installing boot loader (mga#17455)
  o set GRUB_DEFAULT + GRUB_SAVEDEFAULT (mga#9627, mga#16059)
  o stop offering grub legacy & lilo on new installs (mga#18583)

Version 17.33 - 27 May 2016
