@@ -1,3 +1,7 @@
+- summary:
+  o fix not listing some services (mga#17288)
+  o fix updating firewall status after configuration (mga#17288)
+
 Version 17.42 - 22 June 2016
 
 - bootloader configuration:
